--- a/package.json
+++ b/package.json
@@ -4,8 +4,24 @@
   "description": "A store app for users to make purchases and for admin users to keep track of inventory in real time.",
   "main": "src/server.js",
   "scripts": {
-    "test": "export NODE_ENV=test&& jasmine"
+    "test": "export NODE_ENV=test&& jasmine",
+    "start": "nodemon BookTable",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "author": "Richard Tinajero",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jasmine": "^3.0.0",
+    "request": "^2.83.0"
+  },
+  "dependencies": {
+    "concurrently": "^4.1.0",
+    "dotenv": "^5.0.0",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.32.6"
+  }
 }
