--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "export NODE_ENV=test&& jasmine",
-    "start": "nodemon BookTable",
+    "start": "node BookTable",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm start\" \"npm run client\""
   },
