--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -22,6 +22,7 @@
     "password": null,
     "database": "process.env.DATABASE_URL",
     "host": "127.0.0.1",
+    "port": "5432",
     "dialect": "postgres"
   }
 }
