--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -20,9 +20,9 @@
   "production": {
     "username": "root",
     "password": null,
-    "database": "process.env.DATABASE_URL",
+    "database": "database_production",
     "host": "127.0.0.1",
-    "port": "5432",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "use_env_variable": "DATABASE_URL"
   }
 }
