--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.1",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.32.6"
+    "sequelize": "^4.32.6",
+    "sequelize-cli": "^5.5.0"
   }
 }
