--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A store app for users to make purchases and for admin users to keep track of inventory in real time.",
   "main": "src/server.js",
   "scripts": {
+    "build": "webpack",
     "app": "nodemon BookTable",
     "test": "export NODE_ENV=test&& jasmine",
     "start": "node src/server.js",
@@ -14,9 +15,19 @@
   "license": "ISC",
   "devDependencies": {
     "jasmine": "^3.0.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "webpack": "^4.35.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "concurrently": "^4.1.0",
@@ -31,6 +42,10 @@
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "sequelize": "^4.32.6",
     "sequelize-cli": "^5.5.0"
   }
